# Valori-Kernel

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INVARIANTS.md  LICENSE  Makefile  PERFORMANCE.md  README.md  SECURITY.md  TRADEMARK.md  all-functions.md  architecture.md  deny.toml  dev-setup.sh  docker-compose.cluster.yml  docker-compose.shard-test.yml  docker-compose.test.yml  docker-compose.yml  essence.rst  run_scale_test.sh  run_test.sh  scratch.py  scratch2.py  start-local-cluster.sh  stress_test_million.py  test_delete_local.py  test_remote_graph.py  test_retrieval.py  test_scale_10k.py  valori_e2e_tracer.py  valori_ffi.pyd
crates/cli/: Cargo.toml  README.md
crates/cli/src/: engine.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: error.rs  fixtures.rs  idx.rs  lib.rs  snapshot.rs  wal.rs
crates/valori-cli/: Cargo.toml  README.md
crates/valori-cli/src/: engine.rs  main.rs
crates/valori-cli/tests/: cluster_cli.rs  integration_test.rs
crates/valori-consensus/: Cargo.toml  README.md  build.rs
crates/valori-consensus/proto/: raft.proto
crates/valori-consensus/src/: lib.rs  log_store.rs  log_store_redb.rs  network.rs  partition_harness.rs  raft_committer.rs  state_machine.rs  types.rs
crates/valori-consensus/tests/: fault_tolerance.rs  grpc_cluster.rs  log_store.rs  log_store_redb.rs  mtls.rs  multi_shard.rs  multi_shard_partition.rs  openraft_compliance.rs  partition_scenarios.rs  placeholder.rs  proptest_event_fuzz.rs  snapshot_transfer.rs  state_machine.rs  type_config.rs
crates/valori-core/: Cargo.toml  README.md
crates/valori-core/src/: enums.rs  error.rs  id.rs  lib.rs  version.rs
crates/valori-daemon/: Cargo.toml  README.md
crates/valori-daemon/src/: daemon.rs  error.rs  events.rs  http.rs  lib.rs  main.rs  policy.rs  project.rs  store.rs  supervisor.rs  workspace.rs
crates/valori-daemon/tests/: lifecycle.rs
crates/valori-effect/: Cargo.toml  README.md
crates/valori-effect/src/: bus.rs  capability.rs  effect.rs  error.rs  lib.rs  receipt.rs  task.rs
crates/valori-engine/: Cargo.toml  README.md
crates/valori-engine/src/: config.rs  engine.rs  error.rs  lib.rs  metadata.rs  persistence.rs
crates/valori-ffi/: Cargo.toml  README.md  build.rs  verify_offline_withoutserver.py
crates/valori-ffi/src/: lib.rs
crates/valori-index/: Cargo.toml  README.md
crates/valori-index/src/: bq.rs  brute_force.rs  hnsw.rs  ivf.rs  lib.rs  traits.rs
crates/valori-ingest/: Cargo.toml  README.md
crates/valori-ingest/src/: cancel.rs  chunker.rs  config.rs  document.rs  embed.rs  embedder.rs  execution.rs  extractor.rs  (+13 more)
crates/valori-kernel/: Cargo.toml  README.md
crates/valori-mcp/: Cargo.toml  README.md
crates/valori-metadata/: Cargo.toml  README.md
crates/valori-models/: Cargo.toml  README.md
crates/valori-node/: API_README.md  Cargo.toml  README.md
crates/valori-planner/: Cargo.toml  README.md
crates/valori-rag/: Cargo.toml  README.md
crates/valori-search/: Cargo.toml  README.md
crates/valori-state/: Cargo.toml  README.md
crates/valori-storage/: Cargo.toml  README.md
crates/valori-verify/: Cargo.toml  README.md  tamper_demo.sh
crates/valori-wire/: Cargo.toml  README.md
desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
embedded/: Cargo.toml  README.md
embedded/scripts/: qemu_test.sh
embedded/src/: checkpoint.rs  flash.rs  inference.rs  main.rs  proof.rs  recovery.rs  search.rs  shadow.rs  snapshot.rs  transport.rs  wal.rs  wal_stream.rs
embedded/tests/: cross_platform_hash.rs
ffi/: Cargo.toml  README.md  build_err_ffi.txt  test_valori.py
ffi/src/: lib.rs
node/: API_README.md  Cargo.toml  build_err.txt
node/examples/: crash_recovery_demo.rs
node/src/: api.rs  config.rs  engine.rs  errors.rs  lib.rs  main.rs  metadata.rs  persistence.rs  recovery.rs  replication.rs  server.rs  telemetry.rs  wal_reader.rs  wal_writer.rs
node/target_tmp/: .rustc_info.json
node/tests/: api_batch_ingest.rs  api_replication.rs  crash_durability.rs  deterministic_edge_tests.rs  deterministic_ivf_tests.rs  deterministic_kmeans_tests.rs  deterministic_pq_tests.rs  e2e_proof.rs  fuzz_crash_recovery.rs  hnsw_tests.rs  integration_tests.rs  ivf_recall.rs  multi_arch_determinism.rs  persistence_index_tests.rs  persistence_tests.rs  proof_e2e_tests.rs  replication_bootstrap.rs  replication_cluster.rs  replication_divergence.rs
python/: .gitignore  README.md  after_crash.json  pyproject.toml  setup.py  test_batch_verify.py  test_bridge.py  test_client.py  test_insert_with_proof.py  test_koyeb_production.py  test_memory.py  test_new_ffi.py  test_protocol.py  test_protocol_remote.py  test_replication_e2e.py  test_unified.py  test_valori_integrated.py  valoricore_readme.md
python/docs/: api_reference.md  getting_started.md
python/examples/: async_fastapi_demo.py  comprehensive_demo.py  demo_embeddings.py  demo_remote.py  demo_sentence_transformers.py
python/tests/: conftest.py  test_adapters.py  test_batch_verify.py  test_bridge.py  test_decay_sdk.py  test_graphrag_sdk.py  test_insert_with_proof.py  test_integrations.py  test_koyeb_production.py  test_memory.py  test_new_ffi.py  test_protocol.py  test_protocol_errors.py  test_protocol_remote.py  test_python_remote.py  test_remote_receipts.py  test_replication_e2e.py  test_robust_client.py  test_scale_10k.py  test_unified.py  test_valori_integrated.py  test_verify_module.py
python/valori/: __init__.py  adapter.py  chunking.py  client.py  ingest.py  kinds.py  local.py  memory.py  protocol.py  remote.py
python/valoricore/: __init__.py  adapter.py  async_memory.py  base.py  chunking.py  cli.py  embeddings.py  exceptions.py  factory.py  graph.py  ingest.py  kinds.py  llamaindex.py  local.py  memory.py  protocol.py  py.typed  remote.py  sentence_transformers_adapter.py  types.py  verify.py
verify/: Cargo.toml  tamper_demo.sh
verify/src/: anchor.rs  main.rs
(+1020 files in other folders)
