[workspace]
resolver = "2"
members = [
    "crates/valori-kernel",
    "crates/valori-wire",
    "crates/valori-node",
    "crates/valori-ffi",
    "crates/valori-verify",
    "crates/valori-cli",
    "crates/valori-consensus",
    "crates/valori-mcp",
    # embedded is intentionally excluded from the workspace — it has a path
    # dependency on the INT sibling repo (../../INT) which is not checked in.
    # Build locally: cargo build --manifest-path embedded/Cargo.toml --target thumbv7em-none-eabihf
]
# Excluded from default builds:
#  - embedded: Cortex-M firmware (no_std + its own panic handler) — cannot
#    build for the host, and requires the INT sibling repo at ../../INT.
#  - valori-ffi: PyO3 extension module — links against Python symbols that
#    only resolve when maturin builds it. Build: pip install ./python
default-members = [
    "crates/valori-kernel",
    "crates/valori-wire",
    "crates/valori-node",
    "crates/valori-verify",
    "crates/valori-cli",
    "crates/valori-consensus",
    "crates/valori-mcp",
]

# Shared package metadata — every crate inherits this with `.workspace = true`,
# so the workspace ships one coherent version instead of seven that drift.
[workspace.package]
version    = "0.2.4"
edition    = "2021"
license    = "MIT OR Apache-2.0"
authors    = ["Varshith Gudur"]
repository = "https://github.com/valori-db/valori-kernel"

# Internal crates carry an explicit version alongside the path so they are
# publish-ready (crates.io requires it) and so cargo-deny's wildcard ban does
# not flag them. Paths resolve from the workspace root. Bump the version here
# in lockstep with [workspace.package].
[workspace.dependencies]
# default-features = false keeps the no_std firmware (embedded/) buildable;
# `std` is an opt-in feature on valori-kernel, so consumers that need it (the
# PyO3 FFI) enable `features = ["std"]` explicitly.
valori-kernel    = { path = "crates/valori-kernel",    version = "0.2.1", default-features = false }
valori-wire      = { path = "crates/valori-wire",      version = "0.2.1" }
valori-consensus = { path = "crates/valori-consensus", version = "0.2.1" }
valori-node      = { path = "crates/valori-node",      version = "0.2.1" }
valori-verify    = { path = "crates/valori-verify",    version = "0.2.1" }

# Firmware requires abort on panic (no unwinding support in no_std)
# This also guarantees fail-closed behavior for the Node.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
