[workspace]
resolver = "2"
members = [
    "crates/valori-core",
    "crates/valori-storage",
    "crates/valori-state",
    "crates/valori-metadata",
    "crates/valori-planner",
    "crates/valori-effect",
    "crates/valori-kernel",
    "crates/valori-wire",
    "crates/valori-node",
    "crates/valori-ffi",
    "crates/valori-verify",
    "crates/valori-cli",
    "crates/valori-consensus",
    "crates/valori-mcp",
    "crates/valori-search",
    "crates/valori-index",
    "crates/valori-rag",
    "crates/valori-ingest",
    "crates/valori-engine",
    "crates/valori-daemon",
    "crates/valori-models",
    # embedded is intentionally excluded from the workspace — it has a path
    # dependency on the INT sibling repo (../../INT) which is not checked in.
    # Build locally: cargo build --manifest-path embedded/Cargo.toml --target thumbv7em-none-eabihf
]
# Excluded from default builds:
#  - embedded: Cortex-M firmware (no_std + its own panic handler) — cannot
#    build for the host, and requires the INT sibling repo at ../../INT.
#  - valori-ffi: PyO3 extension module — links against Python symbols that
#    only resolve when maturin builds it. Build: pip install ./python
default-members = [
    "crates/valori-core",
    "crates/valori-storage",
    "crates/valori-state",
    "crates/valori-metadata",
    "crates/valori-planner",
    "crates/valori-effect",
    "crates/valori-kernel",
    "crates/valori-wire",
    "crates/valori-node",
    "crates/valori-verify",
    "crates/valori-cli",
    "crates/valori-consensus",
    "crates/valori-mcp",
]

# Shared package metadata — every crate inherits this with `.workspace = true`,
# so the workspace ships one coherent version instead of seven that drift.
[workspace.package]
version    = "0.2.4"
edition    = "2021"
license    = "MIT OR Apache-2.0"
authors    = ["Varshith Gudur"]
repository = "https://github.com/valori-db/valori-kernel"

# Internal crates carry an explicit version alongside the path so they are
# publish-ready (crates.io requires it) and so cargo-deny's wildcard ban does
# not flag them. Paths resolve from the workspace root. Bump the version here
# in lockstep with [workspace.package].
[workspace.dependencies]
# default-features = false keeps the no_std firmware (embedded/) buildable;
# `std` is an opt-in feature on valori-kernel, so consumers that need it (the
# PyO3 FFI) enable `features = ["std"]` explicitly.
valori-core      = { path = "crates/valori-core",      version = "0.2.4", default-features = false }
valori-storage   = { path = "crates/valori-storage",   version = "0.2.4" }
valori-state     = { path = "crates/valori-state",     version = "0.2.4" }
valori-metadata  = { path = "crates/valori-metadata",  version = "0.2.4" }
valori-planner   = { path = "crates/valori-planner",   version = "0.2.4" }
valori-effect    = { path = "crates/valori-effect",    version = "0.2.4" }
valori-kernel    = { path = "crates/valori-kernel",    version = "0.2.1", default-features = false }
valori-wire      = { path = "crates/valori-wire",      version = "0.2.1" }
valori-consensus = { path = "crates/valori-consensus", version = "0.2.1" }
valori-node      = { path = "crates/valori-node",      version = "0.2.1" }
valori-verify    = { path = "crates/valori-verify",    version = "0.2.1" }
valori-search    = { path = "crates/valori-search",    version = "0.2.4" }
valori-index     = { path = "crates/valori-index",     version = "0.2.4" }
valori-rag       = { path = "crates/valori-rag",       version = "0.2.4" }
valori-ingest    = { path = "crates/valori-ingest",    version = "0.2.4" }
valori-engine    = { path = "crates/valori-engine",    version = "0.2.4" }
valori-daemon    = { path = "crates/valori-daemon",    version = "0.2.4" }
valori-models    = { path = "crates/valori-models",    version = "0.1.0" }

# Firmware requires abort on panic (no unwinding support in no_std)
# This also guarantees fail-closed behavior for the Node.
[profile.dev]
panic = "abort"
# Line tables keep backtraces readable; full DWARF for workspace code is what
# balloons target/debug into tens of GB.
debug = "line-tables-only"

# Dependencies don't need debug info at all — we never step into them.
[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
panic = "abort"
# Thin LTO: cross-crate inlining (fxp/l2 hot path benefits) at a fraction of
# fat-LTO's compile cost. Strip DWARF but keep the symbol table so production
# backtraces still resolve.
lto = "thin"
strip = "debuginfo"
codegen-units = 1
