[workspace]
resolver = "2"
members = [
    "crates/valori-core",
    "crates/valori-storage",
    "crates/valori-state",
    "crates/valori-metadata",
    "crates/valori-planner",
    "crates/valori-effect",
    "crates/valori-kernel",
    "crates/valori-wire",
    "crates/valori-node",
    "crates/valori-ffi",
    "crates/valori-verify",
    "crates/valori-cli",
    "crates/valori-consensus",
    "crates/valori-mcp",
    "crates/valori-search",
    "crates/valori-index",
    "crates/valori-rag",
    "crates/valori-ingest",
    "crates/valori-engine",
    "crates/valori-daemon",
    "crates/valori-models",
    # embedded is intentionally excluded from the workspace — it has a path
    # dependency on the INT sibling repo (../../INT) which is not checked in.
    # Build locally: cargo build --manifest-path embedded/Cargo.toml --target thumbv7em-none-eabihf
]
# Excluded from default builds:
#  - embedded: Cortex-M firmware (no_std + its own panic handler) — cannot
#    build for the host, and requires the INT sibling repo at ../../INT.
#  - valori-ffi: PyO3 extension module — links against Python symbols that
#    only resolve when maturin builds it. Build: pip install ./python
default-members = [
    "crates/valori-core",
    "crates/valori-storage",
    "crates/valori-state",
    "crates/valori-metadata",
    "crates/valori-planner",
    "crates/valori-effect",
    "crates/valori-kernel",
    "crates/valori-wire",
    "crates/valori-node",
    "crates/valori-verify",
    "crates/valori-cli",
    "crates/valori-consensus",
    "crates/valori-mcp",
]

# Shared package metadata — every crate inherits this with `.workspace = true`,
# so the workspace ships one coherent version instead of seven that drift.
[workspace.package]
version    = "0.2.4"
edition    = "2021"
license    = "MIT OR Apache-2.0"
authors    = ["Varshith Gudur"]
repository = "https://github.com/valori-db/valori-kernel"

# Internal crates carry an explicit version alongside the path so they are
# publish-ready (crates.io requires it) and so cargo-deny's wildcard ban does
# not flag them. Paths resolve from the workspace root. Bump the version here
# in lockstep with [workspace.package].
[workspace.dependencies]
# default-features = false keeps the no_std firmware (embedded/) buildable;
# `std` is an opt-in feature on valori-kernel, so consumers that need it (the
# PyO3 FFI) enable `features = ["std"]` explicitly.
valori-core      = { path = "crates/valori-core",      version = "0.2.4", default-features = false }
valori-storage   = { path = "crates/valori-storage",   version = "0.2.4" }
valori-state     = { path = "crates/valori-state",     version = "0.2.4" }
valori-metadata  = { path = "crates/valori-metadata",  version = "0.2.4" }
valori-planner   = { path = "crates/valori-planner",   version = "0.2.4" }
valori-effect    = { path = "crates/valori-effect",    version = "0.2.4" }
valori-kernel    = { path = "crates/valori-kernel",    version = "0.2.1", default-features = false }
valori-wire      = { path = "crates/valori-wire",      version = "0.2.1" }
valori-consensus = { path = "crates/valori-consensus", version = "0.2.1" }
valori-node      = { path = "crates/valori-node",      version = "0.2.1" }
valori-verify    = { path = "crates/valori-verify",    version = "0.2.1" }
valori-search    = { path = "crates/valori-search",    version = "0.2.4" }
valori-index     = { path = "crates/valori-index",     version = "0.2.4" }
valori-rag       = { path = "crates/valori-rag",       version = "0.2.4" }
valori-ingest    = { path = "crates/valori-ingest",    version = "0.2.4" }
valori-engine    = { path = "crates/valori-engine",    version = "0.2.4" }
valori-daemon    = { path = "crates/valori-daemon",    version = "0.2.4" }
valori-models    = { path = "crates/valori-models",    version = "0.1.0" }

# ── Workspace lints ────────────────────────────────────────────────────────────
# Allow lints that are noisy in new/generated code but not indicative of bugs.
# These can be cleaned up incrementally in follow-up PRs.
[workspace.lints.rust]
unreachable_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
unused_parens = "allow"

[workspace.lints.clippy]
default_constructed_unit_structs = "allow"
derivable_impls = "allow"
doc_lazy_continuation = "allow"
iter_cloned_collect = "allow"
len_without_is_empty = "allow"
manual_div_ceil = "allow"
manual_flatten = "allow"
manual_is_multiple_of = "allow"
manual_range_contains = "allow"
needless_range_loop = "allow"
new_without_default = "allow"
redundant_field_names = "allow"
redundant_guards = "allow"
redundant_pattern_matching = "allow"
trim_split_whitespace = "allow"
explicit_auto_deref = "allow"
manual_clamp = "allow"
manual_repeat_n = "allow"
missing_const_for_thread_local = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_map_or = "allow"
while_let_loop = "allow"
result_large_err = "allow"
result_unit_err = "allow"
suspicious_open_options = "allow"
collapsible_match = "allow"
double_ended_iterator_last = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"
cloned_ref_to_slice_refs = "allow"
doc_overindented_list_items = "allow"
io_other_error = "allow"
needless_borrow = "allow"
ptr_arg = "allow"
single_match = "allow"
useless_conversion = "allow"
needless_lifetimes = "allow"
assertions_on_constants = "allow"
field_reassign_with_default = "allow"
bool_assert_comparison = "allow"
int_plus_one = "allow"
useless_vec = "allow"

# Firmware requires abort on panic (no unwinding support in no_std)
# This also guarantees fail-closed behavior for the Node.
[profile.dev]
panic = "abort"
# Line tables keep backtraces readable; full DWARF for workspace code is what
# balloons target/debug into tens of GB.
debug = "line-tables-only"

# Dependencies don't need debug info at all — we never step into them.
[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
panic = "abort"
# Thin LTO: cross-crate inlining (fxp/l2 hot path benefits) at a fraction of
# fat-LTO's compile cost. Strip DWARF but keep the symbol table so production
# backtraces still resolve.
lto = "thin"
strip = "debuginfo"
codegen-units = 1
