[package]
name = "valori-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-alloc = "0.5"
panic-halt = "0.2"

# Local Kernel Dependency (Core)
# Using 'valori-kernel' as name to match workspace, path to root where lib.rs lives
# Crucial: default-features = false ensures no_std
valori-kernel = { path = "../crates/kernel", default-features = false }
blake3 = { version = "1.5", default-features = false }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde"] }
serde-json-core = "0.5" # No-std JSON serialization for proof
hex = { version = "0.4", default-features = false, features = ["alloc"] } # For hex encoding hashes
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[[bin]]
name = "valori-embedded"
path = "src/main.rs"
test = false
bench = false
