[package]
name = "valori-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "valori_ffi"
crate-type = ["cdylib"]

[dependencies]
valori-kernel = { path = ".." }
valori-node = { path = "../node" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
serde_json = "1.0"
hex = "0.4"
