[package]
name = "valori-node"
version = "0.1.0"
edition = "2021"

[dependencies]
valori-kernel = { path = "../", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = { version = "2.0.1", features = ["serde"] }
crc32fast = "1.5.0"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3.23.0"
