[package]
name = "valori-node"
version = "0.1.0"
edition = "2021"

[dependencies]
valori-kernel = { path = "../", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = { version = "2.0.1", features = ["serde"] }
crc32fast = "1.5.0"
blake3 = "1.5"

axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tower-http = { version = "0.5", features = ["cors", "validate-request"] }

[dev-dependencies] 
tempfile = "3.23.0"
