[package]
name = "valori-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "valori_cli"
path = "src/lib.rs"

[[bin]]
name = "valori"
path = "src/main.rs"

[[bin]]
name = "bench_ingest"
path = "src/bin/bench_ingest.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
valori-persistence = { path = "../persistence" }
anyhow = "1.0"
comfy-table = "7.1"
chrono = "0.4"
crc64fast = "1.0"
valori-kernel = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
bytemuck = "1.14"


[dev-dependencies]
tempfile = "3.24.0"

