[package]
name = "valori-persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
crc64fast = "1.0"
thiserror = "1.0"
anyhow = "1.0"
byteorder = "1.5"

serde = { version = "1.0", features = ["derive"], optional = true } 
valori-kernel = { path = "../.." }

[dev-dependencies]
tempfile = "3.24.0"
