[package]
name        = "valori-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Valori Forensic CLI — black-box flight recorder for Valori AI memory databases"

[lib]
name = "valori_cli"
path = "src/lib.rs"

[[bin]]
name = "valori"
path = "src/main.rs"

[[bin]]
name = "bench_ingest"
path = "src/bin/bench_ingest.rs"

[[bin]]
name = "bench_1m"
path = "src/bin/bench_1m.rs"

[[bin]]
name = "bench_filter"
path = "src/bin/bench_filter.rs"

[[bin]]
name = "bench_persistence"
path = "src/bin/bench_persistence.rs"

[[bin]]
name = "bench_recall"
path = "src/bin/bench_recall.rs"

[dependencies]
clap        = { version = "4.5",   features = ["derive"] }
anyhow      = "1.0"
comfy-table = "7.1"
chrono      = "0.4"
crc64fast   = "1.0"
bincode     = { version = "2.0.1", features = ["serde"] }
valori-node   = { workspace = true }
valori-kernel = { workspace = true, features = ["std"] }
valori-wire    = { workspace = true }
serde       = { version = "1.0",   features = ["derive"] }
serde_json  = "1.0"
memmap2     = "0.9"
# Sync HTTP client for the `valori cluster` operator commands.
ureq             = { version = "2", features = ["json"] }
bytemuck         = "1.14"
# Async runtime (wizard bootstraps nodes in-process).
tokio            = { version = "1", features = ["full"] }
# Interactive setup wizard.
dialoguer        = "0.11"
indicatif        = "0.17"
dirs             = "5"
valori-consensus = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
axum     = "0.7"
