[package]
name = "valori-consensus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Raft consensus layer for Valori cluster mode (Phase 2)"

[dependencies]
valori-kernel = { path = "../valori-kernel" }

# openraft 0.9 — the stable line (Databend runs it in production).
# serde feature: log entries and vote types must serialize for the wire.
# storage-v2: unseals the RaftLogStorage/RaftStateMachine split (the modern
# storage API) — without it only the legacy RaftStorage trait is implementable.
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

serde = { version = "1", features = ["derive"] }
thiserror = "1"
# Snapshot payload framing (kernel V5 bytes + dedup table + meta).
bincode = { version = "2", features = ["serde"] }

# Persistent Raft log (Phase 2.10). Embedded, ACID, single-file —
# the Raft log and vote survive process crashes.
redb = "2"

# gRPC transport (Phase 2.4).
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.12"
# Vendored protoc — no system install needed, on dev machines or CI.
protoc-bin-vendored = "3"
