[package]
name = "valori-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raft consensus layer for Valori cluster mode (Phase 2)"

[dependencies]
valori-kernel = { workspace = true, features = ["std"] }

# openraft 0.9 — the stable line (Databend runs it in production).
# serde feature: log entries and vote types must serialize for the wire.
# storage-v2: unseals the RaftLogStorage/RaftStateMachine split (the modern
# storage API) — without it only the legacy RaftStorage trait is implementable.
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
# Snapshot payload framing (kernel V5 bytes + dedup table + meta).
bincode = { version = "2", features = ["serde"] }

# Persistent Raft log (Phase 2.10). Embedded, ACID, single-file —
# the Raft log and vote survive process crashes.
redb = "2"

# gRPC transport (Phase 2.4).
# tls feature: rustls-backed mutual TLS on the Raft channel (Phase 2.10b).
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1", features = ["sync", "rt", "macros", "time", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tempfile = "3"
# Test-only CA + leaf certificate generation for the mTLS tests.
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
# Randomised event-sequence fuzz (Phase 2 proptest item).
proptest = "1"

[build-dependencies]
tonic-build = "0.12"
# Vendored protoc — no system install needed, on dev machines or CI.
protoc-bin-vendored = "3"
