[package]
name = "valori-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-dependency shared types for the Valori platform (IDs, enums, errors, traits)"

# ── no_std by default ─────────────────────────────────────────────────────────
# valori-core must compile for embedded and WASM targets with no OS dependency.
# Opt in to std via the "std" feature (enabled automatically for valori-node,
# valori-consensus, and any std crate via features = ["std"]).
[dependencies]
serde     = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
thiserror = { version = "2.0", default-features = false }
getrandom = { version = "0.2", optional = true }

[features]
default = ["std"]
std = ["thiserror/std", "dep:getrandom"]

# No dev-dependencies — core is intentionally dependency-free.
