[package]
name = "valori-effect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Effect system and EffectBus for Valori: Capability traits, Effect enum, EffectBus dispatch/dedup, Task trait + TaskContext"

[dependencies]
valori-core    = { workspace = true, features = ["std"] }
valori-planner = { workspace = true }

async-trait = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
tracing     = "0.1"
tokio       = { version = "1.0", features = ["sync", "time"] }
blake3      = "1.5"
bytes       = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "sync", "time"] }
