[package]
name = "valoricore-ffi"
version = "0.1.11"
edition = "2021"

[lib]
name = "valoricore_ffi"
crate-type = ["cdylib"]

[dependencies]
valori-kernel = { path = "../valori-kernel", features = ["std"] }
valori-node = { path = "../valori-node" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
serde_json = "1.0"
hex = "0.4"
blake3 = "1"
bincode = "2.0.0-rc.3"
