[package]
name = "valoricore-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "valoricore_ffi"
crate-type = ["cdylib"]

[dependencies]
valori-kernel = { workspace = true, features = ["std"] }
valori-node = { workspace = true }
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py39"] }
serde_json = "1.0"
hex = "0.4"
blake3 = "1"
bincode = "2.0.0-rc.3"
