[package]
name = "valori-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vector index structures for the Valori platform: BruteForce, HNSW, IVF, BQ, and quantization."

[dependencies]
valori-kernel = { path = "../valori-kernel", version = "0.2.1", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
rustc-hash = "1"
tracing = "0.1"

[lints]
workspace = true
